make sure the gradient doesn't overlap the content

--- a/scss/partials/_topic_overlay.scss
+++ b/scss/partials/_topic_overlay.scss
@@ -128,6 +128,7 @@ $topic_overlay_text_color: #2d2d2d;
           background: -o-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);
           background: -ms-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);
           background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);
+          pointer-events: none;
         }
       }
     }
